--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="">
     <meta property="og:title" content="CHICANE">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="og.png">
+    <meta property="og:image" content="f1_logo.svg">
     <meta property="og:description" content="시케인">
 
     
@@ -59,7 +59,7 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    <img src="https://i.namu.wiki/i/Iaefn8IUyfgMAOmBskzuhSdumRKYfVHNqIWI-3GV-f1f00Pt1lg6c9x98jvm3nbYXzCJSHy45R0MPvv6x8OC2g.svg" alt="f1" width="400" height="30">
+    <img src="f1_logo.svg" alt="f1" width="400" height="30">
     </a>
 
     <p style="font-size: xxx-large; margin-bottom: 0">CHICANE</p>
