--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
     
     <br><br><br><br><br><br><br><br><br>
 
+    <audio autoplay loop>
+        <source src="theme.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     
 
     <p>2024 CHICANE, All Rights Reserved.,</p>
