--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
     
     <br><br><br><br><br><br><br><br><br>
 
-    <audio autoplay loop>
-        <source src="theme.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <audio controls autoplay scr="theme.mp3">	</audio>
 
     
 
