--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     
     <br><br><br><br><br><br><br><br><br>
 
-    <audio controls autoplay scr="theme.mp3">	</audio>
+    <audio controls autoplay scr="chicane/theme.mp3">	</audio>
 
     
 
