--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
     
     <br><br><br><br><br><br><br><br><br>
 
-    <audio controls autoplay scr="chicane/theme.mp3">	</audio>
-
+    <iframe src="../silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+<audio id="audio" autoplay>
+ <source src="../theme.mp3">
+</audio>
     
 
     <p>2024 CHICANE, All Rights Reserved.,</p>
