--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     
     <br><br><br><br><br><br><br><br><br>
 
-    <iframe src="../silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 <audio id="audio" autoplay>
- <source src="../theme.mp3">
+ <source src="theme.mp3">
 </audio>
     
 
