--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     
     <br><br><br><br><br><br><br><br><br>
 
-    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+    <iframe src="https://github.com/qpi-labels/chicane/blob/78a34ac4c6086383186f70e71acfc4ad2a7368b3/silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 <audio id="audio" autoplay>
- <source src="theme.mp3">
+ <source src="https://github.com/qpi-labels/chicane/blob/78a34ac4c6086383186f70e71acfc4ad2a7368b3/theme.mp3">
 </audio>
     
 
