--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     
     <br><br><br><br><br><br><br><br><br>
 
-    <iframe src="https://github.com/qpi-labels/chicane/blob/78a34ac4c6086383186f70e71acfc4ad2a7368b3/silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-<audio id="audio" autoplay>
- <source src="https://github.com/qpi-labels/chicane/blob/78a34ac4c6086383186f70e71acfc4ad2a7368b3/theme.mp3">
-</audio>
+     <a href="#" class="button" onclick="playMusic()">음악 듣기</a>
+
+    <!-- Audio element -->
+    <audio id="music" src="theme.mp3"></audio>
     
 
     <p>2024 CHICANE, All Rights Reserved.,</p>
